# xai-dissect

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: grok2-support.md
docs/: architecture.md  export-contracts.md  grok2-future-support.md  non_goals.md  observed-grok1-ckpt0.md  output-conventions.md  tensor-schema.md
docs/research/hypotheses/: HYP-XD-001-grok-static-carthography-saaq-readiness.md
scripts/observability/: newrelic_event.sh  sentry_release.sh
src/: lib.rs  main.rs  observability.rs
src/experts/: mod.rs
src/exports/: mod.rs
src/inventory/: mod.rs
src/parser/: mod.rs
src/report/: mod.rs
src/routing/: mod.rs
src/schema/: mod.rs
src/stats/: mod.rs
tests/: cli_help.rs  export_contracts.rs  parser_inventory.rs
tests/fixtures/exports/: experts.snap  inventory.snap  routing-report.snap  saaq-readiness.snap  stats.snap
tests/fixtures/parser/: single_f32_tensor.pkl.hex
tests/support/: mod.rs
