[workspace]

[package]
name = "xai-dissect"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-copy dissector for Grok-1 raw JAX/Pickle tensor shards"
license = "GPL-3.0-only"
repository = "https://github.com/rmems/xai-dissect"

[lib]
name = "xai_dissect"
path = "src/lib.rs"

[[bin]]
name = "xai-dissect"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
memchr = "2.7"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
